2000-04-11  Chris Toshok  <toshok@helixcode.com>

	* addressbook/backend/pas/pas-backend-file.c
	(pas_backend_file_search): remove spew.
	(pas_backend_file_process_create_card): move the sync to the
	earliest possible point after the db operation.
	(pas_backend_file_process_remove_card): same.
	(pas_backend_file_process_modify_card): same, and call
	pas_book_respond_modify, not pas_book_respond_remove, here.

	* addressbook/gui/component/addressbook.c (card_deleted_cb): new
	function.
	(delete_contact_cb): wire up button to call
	e_minicard_view_remove_selection.

	* addressbook/gui/minicard/e-minicard-view.c
	(e_minicard_view_remove_selection): fix warning, and stick "view"
	in the name.

2000-04-10  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/ebook/e-book-view.c,
	addressbook/backend/ebook/e-book.c: Changed some incorrect
	gtk_object_refs and gtk_object_unrefs into bonobo_object_refs and
	bonobo_object_unrefs.

	* addressbook/backend/pas/pas-card-cursor.c: Changed a
	gtk_object_destroy to a gtk_object_unref.

	* addressbook/gui/minicard/e-minicard-view.c,
	addressbook/gui/minicard/e-minicard-view.h: Set a list pointer to
	NULL after freeing its contents.  Added
	e_minicard_view_remove_selection function.

	* addressbook/gui/minicard/e-reflow.c: Set a list pointer to NULL
	after freeing its contents.

2000-04-11  Chris Toshok  <toshok@helixcode.com>

	* addressbook/gui/component/addressbook.c (find_contact_cb):
	implement braindead dialog to input the query string for the view.

	also, change all callbacks to get the EMinicardView instead of the
	EBook.

	* addressbook/gui/minicard/e-minicard-view.c
	(e_minicard_view_get_arg): add missing break.

2000-04-10  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/gui/minicard/e-minicard-view.c,
	addressbook/gui/minicard/e-minicard-view.h: Added a "query"
	argument to the e-minicard-view.  Documented all the arguments to
	the e-minicard-view.
